# yololo

./: .gitignore  README.md  pyproject.toml  server.py  setup.py  test
Firefox_Extension/: background.js  content.js  manifest.json  popup.html
chroma_db/: chroma.sqlite3
fred_dev/: Datav01.tsv  create_tweets.py  dataset_pandas.tsv  extract_articles.py
llm-veracity-checker/: manifest.json  popup.html  popup.js  styles.css
src/: .env  config.yaml
src/yololo/: README.md  main.py
src/yololo/Demo/: 0_First_test.py
src/yololo/chroma_db/: chroma.sqlite3
src/yololo/clients/: afp_client.py  client.py  sandbox.py  text.txt  text.xml  the_guardian_client.py  utils.py
src/yololo/domain/: document.py  enums.py  models.py  source_directory.py
src/yololo/llm/: hf.py  initiator.py  llm.py  openai.py  openai_api.py
src/yololo/llms/: BaseLLMClass.py  Qwen25.py
src/yololo/model_ml/: llm.py
src/yololo/retrieval/: rag.py
src/yololo/storage/: ChromDB.py  storage.py
src/yololo/utils/: deep_retrieval.py  rss.py
