[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "yololo"
version = "0.0.0"
description = "Checks veracity of things with LLMs"
readme = "README.md"
authors = [{ name = "N3" }]
dependencies = [
  "torch",
  "transformers",
  "feedparser",
  "chromadb"
]

[tool.setuptools.packages.find]
where = ["src"]
